Change name tab

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="GitHunt – Trending Github Repositories">
+  <meta name="twitter:title" content="GitDit – Trending Github Repositories">
   <meta name="twitter:description" content="Discover trending GitHub repositories with GitHunt.">
   <meta name="twitter:image" content="%PUBLIC_URL%/img/logo.svg">
   
@@ -37,14 +37,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
   
-  <title>GitHunt – Trending Github Repositories</title>
+  <title>GitDit – Trending Github Repositories</title>
 </head>
 <body>
   <noscript>
     <div style="padding: 20px; text-align: center; font-family: -apple-system, BlinkMacSystemFont, sans-serif;">
       <h2>JavaScript Required</h2>
       <p>You need to enable JavaScript to run this app.</p>
-      <p>GitHunt requires JavaScript to display trending GitHub repositories.</p>
+      <p>GitDit requires JavaScript to display trending GitHub repositories.</p>
     </div>
   </noscript>
   
